donation html issue solved

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="history" class="flex flex-col justify-center items-center ">
           </div>
         <!-- Donation event section -->
-         <section id="donation">
+         <section id="donation" class="flex-col">
 
             <!-- Noakhali -->
             <div class="w-[80vw] m-auto my-4 border rounded-lg lg:flex">
