--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donate Bangladesh</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -42,7 +42,7 @@
     </header>
     <main>
         <!-- history section -->
-        <div id="history" class="flex flex-col justify-center items-center ">
+        <div id="history" class="hidden flex flex-col justify-center items-center ">
           </div>
         <!-- Donation event section -->
          <section id="donation" class="flex-col">
