blog.html layout done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="flex justify-between w-[80vw] m-auto">
                 <!-- blog button -->
                 <div>
-                    <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#B4F461] text-[16px] text-white">Blog</button>
+                    <a href="blog.html"><button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#B4F461] text-[16px] text-white">Blog</button></a>
                 </div>
                 <!-- donate bangladesh -->
                 <div class="flex items-center ">
@@ -113,7 +113,7 @@
             <div class="w-[80vw] m-auto my-4 border rounded-lg lg:flex">
                 <!-- Noakhli left -->
                  <div class="p-[2.2vw] lg:w-[50vw] flex justify-center">
-                    <img class="lg:w-[100%]" src="assets/noakhali.png" alt="" srcset="">
+                    <img class="lg:w-[100%]" src="assets/quota-protest.png" alt="" srcset="">
                  </div>
                  <!-- Noakhaali right -->
                  <div class="p-[2.2vw] justify-center m-auto w-[90%] lg:w-[50vw]">
