all done final submission

--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white h-[100vh]">
-    <header class="sticky top-0 ">
+<body class="bg-white h-[100%]">
+    <header >
         <!-- heaader button section -->
         <div class=" bg-[#F9F7F3] h-[8vw] flex items-center">
             <div class="flex justify-between w-[80vw] m-auto">
@@ -30,12 +30,15 @@
         </div>
     </header>
     <main>
-        <!-- question section -->
-        <section class="pb-20">
+        <section>
             <!-- faq -->
             <div>
                 <h1 class=" w-[80vw]  m-auto my-2 p-4 text-3xl text-black"> Important FAQ </h1>
             </div>
+        </section>
+        <!-- question section -->
+        <section class="pb-20">
+            
             <!-- q1 -->
             <div class="collapse collapse-arrow bg-white w-[80vw]  m-auto my-2 border  p-4">
                 <input type="radio" name="my-accordion-2" checked="checked" />
