--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     <a href="blog.html"><button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#B4F461] text-[16px] text-white">Blog</button></a>
                 </div>
                 <!-- donate bangladesh -->
-                <div class="flex items-center ">
+                <div class="flex items-center lg:ml-20">
                     <img class="w-[3vw] mx-1 " src="assets/logo.png" alt="" srcset="">
                     <P class="text-[3vw] text-black  font-semibold">Donate Bangladesh</P>
                 </div>
                 <!-- blance -->
                 <div class="flex items-center">
                     <img class="w-[3vw] mx-1 " src="assets/coin.png" alt="" srcset="">
-                    <p id="main-blance-js" class="text-[3vw] font-semibold">10000</p><p class="text-[2vw] font-thin"> BDT</p>
+                    <p id="main-blance-js" class="text-[3vw] text-black font-semibold">10000 </p><p class="text-[2vw] font-thin"> BDT</p>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
         <div class=" flex justify-center w- 21.5% bg-white ">
             <!-- donate button -->
             <div>
-                <button id="donate-js" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#1111114D] text-[16px] text-white m-2">Donate</button>
+                <button id="donate-js" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#B4F461] text-[16px] text-white m-2">Donate</button>
             </div>
             <!-- history button -->
             <div>
@@ -144,7 +144,7 @@
         
          </section>
          <!-- popup section -->
-          <section id="popup" class="hidden flex flex-col justify-center items-center w-[50vw] lg:w-[25vw] p-10 rounded-lg fixed bottom-[30vw] left-[25vw] md:bottom-[20vw] md:left-[25vw] lg:bottom-[15vw] md:left-[40vw] bg-white/70 ">
+          <section id="popup" class="hidden flex flex-col justify-center items-center w-[50vw] lg:w-[25vw] p-10 rounded-lg fixed bottom-[30vw] left-[25vw] md:bottom-[20vw] md:left-[25vw] lg:bottom-[15vw] md:left-[40vw] bg-white/90 ">
             <div class="flex flex-col justify-center items-center">
                 <h1 class="font-bold text-[20px] text-black py-2">
                     Congrates!
@@ -155,7 +155,7 @@
                 <p class="text-black">You Have Donate For Humankind</p>
                 <h2 class="text-black font-bold py-2">Successfully</h2>
                 <div class="pt-5">
-                    <button id="popdown" class="btn btn-sm bg-neutral-300/50 text-black">Close Confirmation</button>
+                    <button id="popdown" class="btn btn-sm bg-[#B4F461] text-white">Close Confirmation</button>
                 </div>
             </div>
           </section>
