final work of comment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white ">
+<body>
     <header class="sticky top-0 ">
         <!-- heaader button section -->
         <div class=" bg-[#F9F7F3] h-[8vw] flex items-center">
@@ -59,7 +59,7 @@
                         <!-- money -->
                         <div class=" flex items-center bg-[#1111110D] border rounded-lg sm:w-[18vw] lg:w-[12vw] mb-5 p-2">
                             <img class="px-1" src="assets/coin.png" alt="" srcset="">
-                            <p id="noakhali-donate-blance-js" class="text-[16px]">0</p><p class="text-[16px]">BDT</p>
+                            <p id="noakhali-donate-blance-js" class="text-[16px] text-black">0</p><p class="text-[16px]">BDT</p>
                         </div>
                         <!-- heading -->
                          <h3 id="noakhali" class="text-[20px] text-black font-semibold mb-4">Donate for Flood at Noakhali, Bangladesh</h3>
@@ -80,17 +80,17 @@
 
             <!-- Feni -->
             <div class="w-[80vw] m-auto my-4 border rounded-lg lg:flex">
-                <!-- Noakhli left -->
+                <!-- feni left -->
                  <div class="p-[2.2vw] lg:w-[50vw] flex justify-center">
                     <img class="lg:w-[100%]" src="assets/feni.png" alt="" srcset="">
                  </div>
-                 <!-- Noakhaali right -->
+                 <!-- feni right -->
                  <div class="p-[2.2vw] justify-center m-auto w-[90%] lg:w-[50vw]">
                     <div>
                         <!-- money -->
                         <div class=" flex items-center bg-[#1111110D] border rounded-lg sm:w-[18vw] lg:w-[12vw] mb-5 p-2">
                             <img class="px-1" src="assets/coin.png" alt="" srcset="">
-                            <p id="feni-donate-blance-js" class="text-[16px]">0</p><p class="text-[16px]">BDT</p>
+                            <p id="feni-donate-blance-js" class="text-[16px] text-black">0</p><p class="text-[16px]">BDT</p>
                         </div>
                         <!-- heading -->
                          <h3 id="feni" class="text-[20px] text-black font-semibold mb-4">Donate for Flood Relief in Feni,Bangladesh</h3>
@@ -111,17 +111,17 @@
 
             <!-- Aid -->
             <div class="w-[80vw] m-auto my-4 border rounded-lg lg:flex">
-                <!-- Noakhli left -->
+                <!-- aid left -->
                  <div class="p-[2.2vw] lg:w-[50vw] flex justify-center">
                     <img class="lg:w-[100%]" src="assets/quota-protest.png" alt="" srcset="">
                  </div>
-                 <!-- Noakhaali right -->
+                 <!-- aid right -->
                  <div class="p-[2.2vw] justify-center m-auto w-[90%] lg:w-[50vw]">
                     <div>
                         <!-- money -->
                         <div class=" flex items-center bg-[#1111110D] border rounded-lg sm:w-[18vw] lg:w-[12vw] mb-5 p-2">
                             <img class="px-1" src="assets/coin.png" alt="" srcset="">
-                            <p id="aid-donate-blance-js" class="text-[16px]">0</p><p class="text-[16px]">BDT</p>
+                            <p id="aid-donate-blance-js" class="text-[16px] text-black">0</p><p class="text-[16px]">BDT</p>
                         </div>
                         <!-- heading -->
                          <h3 id="aid" class="text-[20px] text-black font-semibold mb-4">Aid for Injured in the Quota Movement</h3>
