--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
                 <!-- blance -->
                 <div class="flex items-center">
                     <img class="w-[3vw] mx-1 " src="assets/coin.png" alt="" srcset="">
-                    <p id="main-blance-js" class="text-[3vw] font-semibold">10000</p><p class="text-[2vw] font-thin"> BDT</p>
+                    <p id="main-blance-js" class="text-[3vw] text-black font-semibold">10000</p><p class="text-[2vw] font-thin"> BDT</p>
                 </div>
             </div>
         </div>
